# liberica

./: .editorconfig  .gitignore  LICENSE  meson.build
src/: Main.vala  meson.build
src/GUI/: Application.vala  ApplicationWindow.vala  meson.build
src/GUI/BottomPanel/: BottomBox.vala  VteTerminal.vala
src/GUI/CodePanel/: CodeBox.vala  SourceView.vala
src/GUI/SidebarPanel/: SidebarBox.vala  TreeListRow.vala
